Correct wrap of profile page when editing

--- a/css/orfex.scss
+++ b/css/orfex.scss
@@ -10,6 +10,12 @@ $bulletins_bgcolor: #fffaf0;
 $bulletins_border: #ed8936;
 $admin_menu_bgcolor: black;
 
+
+.page-user-edit-orfe-profile-faculty .region-content {
+	margin-top: 20px;
+	clear: both;
+}
+
 #toolbar {
 	div.toolbar-drawer {
 		padding: 0;
